# web-data-viewer-poc

./: README.md
server/: Cargo.toml
server/src/: main.rs  server.rs
server/src/data_source/: csv_reader.rs  local_fs.rs  mod.rs
server/src/endpoints/: dir.rs  mod.rs  table.rs
ui/: index.html  libs.md  package-lock.json  package.json
ui/src/: App.tsx  FileBrowserComponent.css  FileBrowserComponent.tsx  TableComponent.tsx
